[package]
name = "anode"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "anode"
path = "src/lib.rs"

[features]
default = []
cuda9 = ["cuda_blas/cuda9", "gpudevicemem/cuda9"]
gpu = ["cuda", "cuda_blas", "cuda_coll", "cuda_dnn", "gpudevicemem"]
mpi = ["mpich", "superdata/mpi"]
#mpi = ["mpich", "cray_shmem", "superdata/shmem"]

[build-dependencies]
#bindgen = "^0.32"
bindgen = "*"
cc = "*"
walkdir = "*"

[dev-dependencies]
colorimage = { path = "../colorimage" }
stb_image = { path = "../rust-stb-image" }
superdata = { path = "../superdata" }
time = "*"

[dependencies]
#arithmetic = { path = "../arithmetic" }
arrayidx = { path = "../arrayidx" }
#async_execution = { path = "../async_execution" }
#cray_link = { path = "../cray_link", optional =  true }
#cray_shmem = { path = "../cray_shmem", optional = true }
cuda = { path = "../libcuda", optional = true }
cuda_blas = { path = "../cuda_blas", optional = true }
cuda_coll = { path = "../cuda_coll", optional = true }
cuda_dnn = { path = "../cuda_dnn", optional = true }
dot = "*"
float = { path = "../libfloat" }
gpudevicemem = { path = "../gpudevicemem", optional = true }
lazy_static = "*"
memarray = { path = "../memarray", features = ["mkl"] }
mpich = { path = "../libmpich", optional = true}
num-traits = "*"
#parking_lot = { version = "*", features = ["nightly"] }
parking_lot = { version = "^0.5", features = ["nightly"] }
#rand = { path = "../rand" }
rand = "^0.5"
#rng = "*"
rng = { path = "../rng" }
sharedmem = { path = "../sharedmem" }
#time = "*"
typemap = "*"
