[package]
name = "anode"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "anode"
path = "src/lib.rs"

[features]
default = []
cuda9 = ["cuda_blas/cuda9", "gpudevicemem/cuda9"]
gpu = ["cuda", "cuda_blas", "cuda_coll", "cuda_dnn", "gpudevicemem"]
mpi = ["mpich", "minidata/mpi"]

[build-dependencies]
bindgen = "*"
cc = "*"
walkdir = "*"

[dev-dependencies]
# colorimage can be found at: https://github.com/peterhj/colorimage
colorimage = { path = "../colorimage" }
minidata = { path = "../minidata" }
rngtape = { path = "../rngtape" }
stb_image = { path = "../rust-stb-image" }
time = "*"

[dependencies]
arrayidx = { path = "../arrayidx" }
#cray_link = { path = "../cray_link", optional =  true }
#cray_shmem = { path = "../cray_shmem", optional = true }
cuda = { path = "../libcuda", optional = true }
cuda_blas = { path = "../cuda_blas", optional = true }
cuda_coll = { path = "../cuda_coll", optional = true }
cuda_dnn = { path = "../cuda_dnn", optional = true }
#dot = "*"
float = { path = "../float" }
gpudevicemem = { path = "../gpudevicemem", optional = true }
lazy_static = "*"
memarray = { path = "../memarray", features = ["mkl"] }
mpich = { path = "../libmpich", optional = true}
num-traits = "*"
parking_lot = { version = "^0.5", features = ["nightly"] }
rand = "^0.5"
#rng = { path = "../rng" }
sharedmem = { path = "../sharedmem" }
typemap = "*"
